# apis/menu.go
@@ -1,16 +1,17 @@
 package apis
 
 import (
-	"github.com/mss-boot-io/mss-boot/pkg/response/actions/authentic"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/mss-boot-io/mss-boot/pkg/config/gormdb"
+	"github.com/mss-boot-io/mss-boot/pkg/response"
+	"github.com/mss-boot-io/mss-boot/pkg/response/actions/authentic"
+	"github.com/mss-boot-io/mss-boot/pkg/response/controller"
+
 	"github.com/mss-boot-io/mss-boot-admin-api/dto"
 	"github.com/mss-boot-io/mss-boot-admin-api/middleware"
 	"github.com/mss-boot-io/mss-boot-admin-api/models"
-	"github.com/mss-boot-io/mss-boot/pkg/config/gormdb"
-	"github.com/mss-boot-io/mss-boot/pkg/response"
-	"github.com/mss-boot-io/mss-boot/pkg/response/controller"
 )
 
 /*
@@ -42,6 +43,17 @@ func (e *Menu) Other(r *gin.RouterGroup) {
 	r.PUT("/menu/authorize/:roleID", middleware.Auth.MiddlewareFunc(), e.UpdateAuthorize)
 }
 
+// UpdateAuthorize 更新菜单权限
+// @Summary 更新菜单权限
+// @Description 更新菜单权限
+// @Tags menu
+// @Accept  application/json
+// @Product application/json
+// @Param id path string true "id"
+// @Param data body dto.UpdateAuthorizeRequest true "data"
+// @Success 200 {object} response.Response
+// @Router /admin/api/menu/{id} [put]
+// @Security Bearer
 func (e *Menu) UpdateAuthorize(ctx *gin.Context) {
 	api := response.Make(ctx)
 	req := &dto.UpdateAuthorizeRequest{}
@@ -60,13 +72,13 @@ func (e *Menu) UpdateAuthorize(ctx *gin.Context) {
 		V0:    req.RoleID,
 	}).Delete(&models.CasbinRule{}).Error
 	if err != nil {
-		api.AddError(err).Log.Errorf("delete role error: %v", err)
+		api.AddError(err).Log.Error("delete role error", "err", err)
 		api.Err(http.StatusInternalServerError)
 		return
 	}
 	defer gormdb.Enforcer.LoadPolicy()
 	if err != nil {
-		api.AddError(err).Log.Errorf("delete role error: %v", err)
+		api.AddError(err).Log.Error("delete role error", "err", err)
 		api.Err(http.StatusInternalServerError)
 		return
 	}
@@ -80,13 +92,23 @@ func (e *Menu) UpdateAuthorize(ctx *gin.Context) {
 		}
 	}
 	if err = gormdb.DB.Create(&rules).Error; err != nil {
-		api.AddError(err).Log.Errorf("create casbin rule error: %v", err)
+		api.AddError(err).Log.Error("create casbin rule error", "err", err)
 		api.Err(http.StatusInternalServerError)
 		return
 	}
 	api.OK(nil)
 }
 
+// GetAuthorize 获取菜单权限
+// @Summary 获取菜单权限
+// @Description 获取菜单权限
+// @Tags menu
+// @Accept  application/json
+// @Product application/json
+// @Param id path string true "id"
+// @Success 200 {object} response.Response{data=[]models.Menu} "{"code": 200, "data": [...]}"
+// @Router /admin/api/menu/{id} [get]
+// @Security Bearer
 func (e *Menu) GetAuthorize(ctx *gin.Context) {
 	api := response.Make(ctx)
 	req := &dto.GetAuthorizeRequest{}
@@ -97,7 +119,7 @@ func (e *Menu) GetAuthorize(ctx *gin.Context) {
 	list := make([]*models.Menu, 0)
 	err := gormdb.DB.WithContext(ctx).Find(&list).Error
 	if err != nil {
-		api.Log.Errorf("get menu tree error: %v", err)
+		api.Log.Error("get menu tree error", "err", err)
 		api.Err(http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -106,7 +128,7 @@ func (e *Menu) GetAuthorize(ctx *gin.Context) {
 		list[i].Select, err = gormdb.Enforcer.Enforce(
 			req.RoleID, list[i].Key, models.MenuAccessType.String())
 		if err != nil {
-			api.AddError(err).Log.Errorf("get menu tree error: %v", err)
+			api.AddError(err).Log.Error("get menu tree error", "err", err)
 			api.Err(http.StatusInternalServerError)
 			return
 		}
@@ -114,12 +136,19 @@ func (e *Menu) GetAuthorize(ctx *gin.Context) {
 	api.OK(models.GetMenuTree(list))
 }
 
+// Tree 获取菜单树
+// @Summary 获取菜单树
+// @Description 获取菜单树
+// @Tags 获取菜单树
+// @Success 200 {object} response.Response{data=[]models.Menu} "{"code": 200, "data": [...]}"
+// @Router /admin/api/menu/tree [get]
+// @Security Bearer
 func (e *Menu) Tree(ctx *gin.Context) {
 	api := response.Make(ctx)
 	list := make([]*models.Menu, 0)
 	err := gormdb.DB.WithContext(ctx).Find(&list).Error
 	if err != nil {
-		api.Log.Errorf("get menu tree error: %v", err)
+		api.Log.Error("get menu tree error", "err", err)
 		api.Err(http.StatusInternalServerError, err.Error())
 		return
 	}
